--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Registro de PINGA</title>
 <style>
+    /* Estilos gerais */
     body {
-        font-family: Arial, sans-serif;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         margin: 0;
         padding: 0;
         background-color: #f4f4f4;
@@ -21,45 +22,82 @@
     }
     h2 {
         text-align: center;
+        color: #007bff;
     }
+    /* Formulário de despesas */
     form {
         margin-bottom: 20px;
     }
     form label {
         display: block;
         margin-bottom: 5px;
+        color: #333;
+        font-weight: bold;
     }
     form input[type="text"],
-    form input[type="number"] {
-        width: 100%;
-        padding: 8px;
-        margin-bottom: 10px;
+    form input[type="number"],
+    form input[type="file"] {
+        width: calc(100% - 20px);
+        padding: 10px;
+        margin-bottom: 15px;
         border: 1px solid #ccc;
         border-radius: 4px;
         box-sizing: border-box;
+        font-size: 16px;
     }
     form button {
-        padding: 10px 20px;
+        padding: 12px 24px;
         background-color: #007bff;
         color: #fff;
         border: none;
         border-radius: 4px;
         cursor: pointer;
+        font-size: 16px;
+        transition: background-color 0.3s ease;
     }
     form button:hover {
         background-color: #0056b3;
     }
+    /* Tabela de despesas */
     table {
         width: 100%;
         border-collapse: collapse;
+        margin-top: 20px;
     }
-    table, th, td {
-        border: 1px solid #ccc;
-        padding: 8px;
+    table th, table td {
+        border: 1px solid #ddd;
+        padding: 12px;
         text-align: left;
     }
-    th {
+    table th {
         background-color: #f2f2f2;
+        color: #333;
+        font-weight: bold;
+    }
+    table td {
+        vertical-align: middle;
+    }
+    table td:last-child {
+        text-align: center;
+    }
+    /* Botões na tabela */
+    .btn {
+        display: inline-block;
+        padding: 8px 16px;
+        margin-right: 8px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 14px;
+        transition: background-color 0.3s ease;
+    }
+    .btn.view-pdf {
+        background-color: #28a745;
+        color: #fff;
+    }
+    .btn.delete {
+        background-color: #dc3545;
+        color: #fff;
     }
 </style>
 </head>
