--- a/public/index.html
+++ b/public/index.html
@@ -105,15 +105,19 @@
 
 <div class="container">
     <h2>Registo de Faturas</h2>
-    <form id="expenseForm" method="post" action="/adicionar_faturas" enctype="multipart/form-data">
+    <form id="expenseForm1" method="post" action="/adicionar_faturas" enctype="multipart/form-data">
         <label for="description">Descrição:</label>
         <input type="text" id="description" name="description" required>
         <label for="amount">Valor:</label>
         <input type="number" id="amount" name="amount" min="0.01" step="0.01" required>
+        <button type="submit" id="submitForm1">Registrar Fatura</button>
+    </form>
+    <form id="fileUploadForm" action="https://estensinaapp.azurewebsites.net/api/uploadFicheiros" method="post" enctype="multipart/form-data">
         <label for="pdfFile">Ficheiro PDF:</label>
-        <input type="file" id="pdfFile" name="pdfFile" accept=".pdf">
-        <button type="submit">Registrar Fatura</button>
-    </form>    
+        <input type="file" id="pdfFile" name="pdfFile" required>
+        <button type="submit">Enviar Arquivo</button>
+    </form>
+        
     <table id="expenseTable">
         <thead>
             <tr>
@@ -129,7 +133,7 @@
 </div>
 
 <script>
-    document.getElementById('expenseForm').addEventListener('submit', function (e) {
+    document.getElementById('expenseForm1').addEventListener('submit', function (e) {
         e.preventDefault();
 
         const description = document.getElementById('description').value;
@@ -197,3 +201,5 @@
 
     window.onload = loadExpenses;
 </script>
+</body>
+</html>
