--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,7 @@
 
 <div class="container">
     <h2>Registo de Faturas</h2>
+    <h2>Registo de Faturas</h2>
     <form id="expenseForm1" method="post" action="/adicionar_faturas" enctype="multipart/form-data">
         <label for="description">Descrição:</label>
         <input type="text" id="description" name="description" required>
