--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@
         <input type="number" id="amount" name="amount" min="0.01" step="0.01" required>
         <button type="submit" id="submitForm1">Registrar Fatura</button>
     </form>
-    <form id="fileUploadForm" action="https://estensinaapp.azurewebsites.net/api/uploadFicheiros" method="post" enctype="multipart/form-data">
+    <form id="fileUploadForm" action="https://estfinancasapp.azurewebsites.net/api/uploadFicheiros?" method="post" enctype="multipart/form-data">
         <label for="pdfFile">Ficheiro PDF:</label>
         <input type="file" id="pdfFile" name="pdfFile" required>
         <button type="submit">Enviar Arquivo</button>
