--- a/public/index.html
+++ b/public/index.html
@@ -158,6 +158,30 @@
         .catch(error => console.error('Erro:', error));
     });
 
+    document.getElementById('fileUploadForm').addEventListener('submit', async function(e) {
+    e.preventDefault();
+
+    const formData = new FormData();
+    const fileInput = document.getElementById('pdfFile');
+    formData.append('pdfFile', fileInput.files[0]);
+
+    try {
+        const response = await fetch('https://estfinancasapp.azurewebsites.net/api/uploadFicheiros?', {
+            method: 'POST',
+            headers: {
+                'x-functions-key': 'ea2_xsz7ZYw5PV1CxzNuLAf2dzwsYJaA7Z_ImVZPA0JGAzFuKkzV7Q=='
+            },
+            body: formData
+        });
+        const data = await response.json();
+        console.log('Upload response:', data);
+        alert('Arquivo enviado com sucesso!');
+    } catch (error) {
+        console.error('Erro ao enviar arquivo:', error);
+        alert('Erro ao enviar arquivo.');
+    }
+});
+
     function loadExpenses() {
         fetch('/faturas')
             .then(response => response.json())
