--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         margin: 0;
         padding: 0;
         background-color: #f4f4f4;
+        color: #333;
     }
     .container {
         max-width: 800px;
@@ -18,11 +19,13 @@
         padding: 20px;
         background-color: #fff;
         border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     }
     h2 {
         text-align: center;
         color: #007bff;
+        font-size: 2em;
+        margin-bottom: 20px;
     }
     /* Formulário de despesas */
     form {
@@ -37,16 +40,25 @@
     form input[type="text"],
     form input[type="number"],
     form input[type="file"] {
-        width: calc(100% - 20px);
-        padding: 10px;
+        width: 100%;
+        padding: 12px;
         margin-bottom: 15px;
         border: 1px solid #ccc;
         border-radius: 4px;
         box-sizing: border-box;
         font-size: 16px;
+        transition: border-color 0.3s ease;
+    }
+    form input[type="text"]:focus,
+    form input[type="number"]:focus,
+    form input[type="file"]:focus {
+        border-color: #007bff;
+        box-shadow: 0 0 5px rgba(0, 123, 255, 0.25);
+        outline: none;
     }
     form button {
-        padding: 12px 24px;
+        width: 100%;
+        padding: 12px;
         background-color: #007bff;
         color: #fff;
         border: none;
@@ -63,6 +75,7 @@
         width: 100%;
         border-collapse: collapse;
         margin-top: 20px;
+        font-size: 16px;
     }
     table th, table td {
         border: 1px solid #ddd;
@@ -70,9 +83,13 @@
         text-align: left;
     }
     table th {
-        background-color: #f2f2f2;
-        color: #333;
+        background-color: #007bff;
+        color: #fff;
         font-weight: bold;
+        text-transform: uppercase;
+    }
+    table tr:nth-child(even) {
+        background-color: #f2f2f2;
     }
     table td {
         vertical-align: middle;
@@ -83,21 +100,30 @@
     /* Botões na tabela */
     .btn {
         display: inline-block;
-        padding: 8px 16px;
+        padding: 10px 20px;
         margin-right: 8px;
         border: none;
         border-radius: 4px;
         cursor: pointer;
         font-size: 14px;
-        transition: background-color 0.3s ease;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+        text-decoration: none;
     }
     .btn.view-pdf {
         background-color: #28a745;
         color: #fff;
     }
+    .btn.view-pdf:hover {
+        background-color: #218838;
+        transform: scale(1.05);
+    }
     .btn.delete {
         background-color: #dc3545;
         color: #fff;
+    }
+    .btn.delete:hover {
+        background-color: #c82333;
+        transform: scale(1.05);
     }
 </style>
 </head>
@@ -105,14 +131,11 @@
 
 <div class="container">
     <h2>Registo de Faturas</h2>
-    <form id="expenseForm1" method="post" action="/adicionar_faturas" enctype="multipart/form-data">
+    <form id="fileUploadForm" action="https://estfinancasapp.azurewebsites.net/api/uploadFicheiros?" method="post" enctype="multipart/form-data">
         <label for="description">Descrição:</label>
         <input type="text" id="description" name="description" required>
         <label for="amount">Valor:</label>
         <input type="number" id="amount" name="amount" min="0.01" step="0.01" required>
-        <button type="submit" id="submitForm1">Registrar Fatura</button>
-    </form>
-    <form id="fileUploadForm" action="https://estfinancasapp.azurewebsites.net/api/uploadFicheiros?" method="post" enctype="multipart/form-data">
         <label for="pdfFile">Ficheiro PDF:</label>
         <input type="file" id="pdfFile" name="pdfFile" required>
         <button type="submit">Enviar Arquivo</button>
@@ -132,33 +155,9 @@
     </table>
 </div>
 
+
 <script>
-    document.getElementById('expenseForm1').addEventListener('submit', function (e) {
-        e.preventDefault();
-
-        const description = document.getElementById('description').value;
-        const amount = document.getElementById('amount').value;
-
-        fetch('/adicionar_faturas', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ description, amount })
-        })
-        .then(response => response.json())
-        .then(data => {
-            if (data.success) {
-                alert('Fatura registrada com sucesso!');
-                loadExpenses();
-            } else {
-                alert('Erro ao registrar a fatura.');
-            }
-        })
-        .catch(error => console.error('Erro:', error));
-    });
-
-    document.getElementById('fileUploadForm').addEventListener('submit', async function(e) {
+document.getElementById('fileUploadForm').addEventListener('submit', async function(e) {
     e.preventDefault();
 
     const formData = new FormData();
@@ -175,55 +174,79 @@
         });
         const data = await response.json();
         console.log('Upload response:', data);
-        alert('Arquivo enviado com sucesso!');
+        if (data.pdfUrl) {
+            saveExpense(data.pdfUrl);
+        } else {
+            alert('Erro ao obter URL do arquivo.');
+        }
     } catch (error) {
         console.error('Erro ao enviar arquivo:', error);
         alert('Erro ao enviar arquivo.');
     }
 });
 
-    function loadExpenses() {
-        fetch('/faturas')
-            .then(response => response.json())
-            .then(data => {
-                const tableBody = document.querySelector('#expenseTable tbody');
-                tableBody.innerHTML = '';
-                data.forEach(expense => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                        <td>${expense.description}</td>
-                        <td>${expense.amount}</td>
-                        <td>
-                            <button onclick="viewPDF('${expense.id}')">Visualizar PDF</button>
-                            <button onclick="deleteExpense('${expense.id}')">Excluir</button>
-                        </td>`;
-                    tableBody.appendChild(row);
-                });
-            })
-            .catch(error => console.error('Erro:', error));
-    }
+function saveExpense(pdfUrl) {
+    const description = document.getElementById('description').value;
+    const amount = document.getElementById('amount').value;
 
-    function deleteExpense(id) {
-        fetch(`/deleteExpense/${id}`, {
-            method: 'DELETE'
-        })
+    fetch('/adicionar_faturas', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ description, amount, pdfUrl })
+    })
+    .then(response => response.json())
+    .then(data => {
+        if (data.success) {
+            alert('Fatura registrada com sucesso!');
+            loadExpenses();
+        } else {
+            alert('Erro ao registrar a fatura.');
+        }
+    })
+    .catch(error => console.error('Erro:', error));
+}
+
+function loadExpenses() {
+    fetch('/faturas')
         .then(response => response.json())
         .then(data => {
-            if (data.success) {
-                alert('Fatura excluída com sucesso!');
-                loadExpenses();
-            } else {
-                alert('Erro ao excluir a fatura.');
-            }
+            const tableBody = document.querySelector('#expenseTable tbody');
+            tableBody.innerHTML = '';
+            data.forEach(expense => {
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${expense.description}</td>
+                    <td>${expense.amount}</td>
+                    <td>
+                        <a href="${expense.pdfUrl}" target="_blank" class="btn view-pdf">Visualizar PDF</a>
+                        <button onclick="deleteExpense('${expense.id}')" class="btn delete">Excluir</button>
+                    </td>`;
+                tableBody.appendChild(row);
+            });
         })
         .catch(error => console.error('Erro:', error));
-    }
+}
 
-    function viewPDF(id) {
-        window.open(`/viewPDF/${id}`, '_blank');
-    }
+function deleteExpense(id) {
+    fetch(`/deleteExpense/${id}`, {
+        method: 'DELETE'
+    })
+    .then(response => response.json())
+    .then(data => {
+        if (data.success) {
+            alert('Fatura excluída com sucesso!');
+            loadExpenses();
+        } else {
+            alert('Erro ao excluir a fatura.');
+        }
+    })
+    .catch(error => console.error('Erro:', error));
+}
 
-    window.onload = loadExpenses;
+window.onload = loadExpenses;
+
 </script>
 </body>
 </html>
