--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     }
     h2 {
         text-align: center;
-        color: #007bff;
+        color: #000000;
         font-size: 2em;
         margin-bottom: 20px;
     }
