--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
 <body>
 
 <div class="container">
-    <h2>Registo de Faturas</h2>
+    <h2>Registro de Faturas Alimentares</h2>
     <form id="fileUploadForm" action="https://estfinancasapp.azurewebsites.net/api/uploadFicheiros?" method="post" enctype="multipart/form-data">
         <label for="description">Descrição:</label>
         <input type="text" id="description" name="description" required>
